# ur5_workbench_ws

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  colcon_defaults.yaml  compose.yaml
.devcontainer/: Dockerfile
config/: colcon-defaults.yaml
mjcf_data/: mujoco_description.xml  mujoco_description_formatted.xml  robot_description_formatted.urdf
src/ur5_workbench_deploy/: CMakeLists.txt  package.xml
src/ur5_workbench_deploy/config/: controllers.yaml
src/ur5_workbench_deploy/launch/: control.launch.py
src/ur5_workbench_deploy/rviz/: view.rviz
src/ur5_workbench_description/: CMakeLists.txt  package.xml
src/ur5_workbench_description/config/: thing1_kinematics.yaml  thing2_kinematics.yaml
src/ur5_workbench_description/launch/: robot_state_publisher.launch.py  rsp.launch.py  view.launch.py
src/ur5_workbench_description/rviz/: view.rviz
src/ur5_workbench_description/urdf/: static_camera_macro.xacro  thing_macro.xacro  ur5_workbench.urdf.xacro  ur5_workbench_macro.xacro
src/ur5_workbench_moveit_config/: CMakeLists.txt
src/ur5_workbench_moveit_config/launch/: moveit.launch.py
src/ur5_workbench_mujoco_config/: CMakeLists.txt  package.xml
src/ur5_workbench_mujoco_config/config/: controllers.yaml
src/ur5_workbench_mujoco_config/launch/: sim.launch.py  test.launch.py
src/ur5_workbench_mujoco_config/urdf/: ur5_workbench.mujoco_ros2_control.xacro
